--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "lahomes",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "tsc && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'"
-  },
+"scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
+},
+
   
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
